--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run: npm run build
       - aws-s3/sync:
           from: build
-          to: 'http://hit-parade-unique-e51-ds.s3-website.eu-west-2.amazonaws.com/'
+          to: 'arn:aws:s3:::hit-parade-unique-e51-ds'
           arguments: |
             --acl public-read \
             --cache-control "max-age=86400" \
