--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
   test:
     docker:
-      - image: circleci/node
+      - image: circleci/node:16.13.0
     steps:
       - checkout
       - run: npm install
@@ -21,7 +21,7 @@ jobs:
       - run: npm run build
       - aws-s3/sync:
           from: build
-          to: 'arn:aws:s3:::hit-parade-unique-e51-ds'
+          to: 's3://hit-parade-unique-e51-ds/'
           arguments: |
             --acl public-read \
             --cache-control "max-age=86400" \
