--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
     "lint": "eslint .",
-    "test": "react-scripts test",0
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "test:e2e": "cypress open"
   },
